2007-10-11 Yusei
* Modified ListBox_asHTML. This changes depends on ERP5Form changes. Please upgrade ERP5Form revision 16942 or above.

2007-09-19 Kazuhiko
* use portal_url.getPortalObject().absolute_url() instead of portal_url.getPortalPath() for better virtual host support.