@@ -3,11 +3,8 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>OFS.Folder</string>
-          <string>Folder</string>
-        </tuple>
-        <none/>
+        <global name="Folder" module="OFS.Folder"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
@@ -16,6 +13,23 @@
             <key> <string>__ac_local_roles__</string> </key>
             <value>
               <none/>
+            </value>
+        </item>
+        <item>
+            <key> <string>_local_properties</string> </key>
+            <value>
+              <tuple>
+                <dictionary>
+                  <item>
+                      <key> <string>id</string> </key>
+                      <value> <string>business_template_registered_skin_selections</string> </value>
+                  </item>
+                  <item>
+                      <key> <string>type</string> </key>
+                      <value> <string>tokens</string> </value>
+                  </item>
+                </dictionary>
+              </tuple>
             </value>
         </item>
         <item>
@@ -28,6 +42,14 @@
             <key> <string>_owner</string> </key>
             <value>
               <none/>
+            </value>
+        </item>
+        <item>
+            <key> <string>business_template_registered_skin_selections</string> </key>
+            <value>
+              <tuple>
+                <string>Mobile</string>
+              </tuple>
             </value>
         </item>
         <item>
